# proxyaudit

./: README.md  app.py  data.py  pyproject.toml  requirements.txt  secrets.toml.example
app/: auditor_demo.html  demo_cases.json  recommender_demo.html  streamlit_app.py
docs/: architecture.md
scripts/: export_faircv_csv.py  run_faircv_real.py  run_fairjob.py  run_fusion.py  run_limitations.py  run_synth.py
src/proxyaudit/: __init__.py  cli.py  counterfactual.py  data.py  fairness.py  faithfulness.py  mediation.py  models.py  neutralize.py  pipeline.py  pls.py  recommend.py  shapley.py  trust.py  viz.py
tests/: conftest.py  test_counterfactual.py  test_mediation.py  test_pipeline.py  test_pls.py  test_proposition1.py
