[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxyaudit"
version = "1.0.0"
description = "Proxy-Channel Localization and Neutralization (PCLN): a faithful-explanation fairness audit with proxy-cluster counterfactuals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Le Vo Minh Thu" },
]
keywords = ["algorithmic fairness", "explainable AI", "shapley values",
            "proxy discrimination", "counterfactual explanations", "recruitment"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scipy>=1.10",
]

[project.optional-dependencies]
app = ["streamlit>=1.30"]
extras = ["shap>=0.44", "xgboost>=2.0", "datasets>=2.16"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/your-org/proxyaudit"
Repository = "https://github.com/your-org/proxyaudit"

[project.scripts]
proxyaudit-synth = "proxyaudit.cli:main_synth"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
